--- a/templates/archive.html
+++ b/templates/archive.html
@@ -5,18 +5,21 @@
 {% block ogdesc %}{{ section.title }}{% endblock ogdesc %}
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 {% block main %} 
-{% set_global blog_section = get_section(path="blog/_index.md") -%}
+{% set_global blog_section = get_section(path="blog/_index"~file_lang_path~".md") -%}
 {% set_global section_content = blog_section.content %}
 <div class="element-container">
+  {% if lang == 'zh-TW' %}
   <div class="element">
   <setion>
     {{ section_content | safe}}
   </setion>
 </div> 
+{% elif lang == 'en' %}
+{% endif %}
 <div class="element">
 <h1>Blog</h1>
 <br>
-{% set all_blog_pages = get_section(path="blog/_index.md") %}
+{% set all_blog_pages = get_section(path="blog/_index"~file_lang_path~".md") %}
 {% for year, posts in all_blog_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
 <br>
