--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,10 @@
 {% import "macros.html" as macro -%}
 {% set all_section_pages = get_section(path="_index.md") -%}
+{%- set_global file_lang_path = "" -%}
+{%- if config.default_language != lang -%}
+  {%- set_global file_lang_path = "." ~ lang -%}
+{%- endif -%}
+
 
 <!DOCTYPE html>
 <html
@@ -91,10 +96,11 @@
   <body>
     <section id="top">
       {% block nav_bar -%}
+      {% if lang == 'zh-TW' -%}
       <nav class="navbar-top">
         <div class="nav-container">
         <div>
-          <a class="navbar-a" style="color: #ffffff" href="{{ config.base_url }}" >
+          <a class="navbar-a" style="color: #ffffff" href="{{ get_url(path="@/_index.md",lang=lang) }}" >
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
             <span class="navbar-name">Pin 起來</span>
           </a> 
@@ -107,11 +113,11 @@
           </div>
         </div>
         <div class="navbar-name">
-          <a class="menu-button" href="/blog/">Blog</a>
-          <a class="menu-button" href="/newsletters/">Newsletters</a>
-          <a class="menu-button" href="/snapshots/">Snapshots</a>
+          <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
+          <a class="menu-button" href="{{ get_url(path="@/newsletters/_index.md",lang=lang) }}">Newsletters</a>
+          <a class="menu-button" href="{{ get_url(path="@/snapshots/_index.md",lang=lang) }}">Snapshots</a>
           <a class="menu-button" href="/stream/2023">Stream</a>
-          <a class="menu-button-search" href="/search/">
+          <a class="menu-button-search" href="{{ get_url(path="@/pages/search.md",lang=lang) }}">
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/search-icon_IsXZSS.svg" alt="search-icon" >
           </a>
         </div>
@@ -130,6 +136,33 @@
         </div>
         </div>
       </nav>
+      {% elif lang == 'en' %}
+      <nav class="navbar-top">
+        <div class="nav-container">
+        <div>
+          <a class="navbar-a" style="color: #ffffff" href="{{ get_url(path="@/_index.md",lang=lang) }}" >
+            <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/pinchlime-logo-02-no-sub-96x96_Bgz9Ey.webp" width = "48" height = "48" alt="Logo of Pinchlime" >
+            <span class="navbar-name">Pinchlime</span>
+          </a> 
+        </div>
+        <div class="mobile-menu-icon">
+          <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+        <div class="navbar-name">
+          <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
+        </div>
+        <div class="mobile-menu">
+          <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
+          <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
+          <a class="menu-button" href="/en/about/">About</a>
+        </div>
+        </div>
+      </nav>
+      {% endif %}
       {% endblock nav_bar %}
     </section>
     <section id="root" >
