--- a/templates/snapshot_archive.html
+++ b/templates/snapshot_archive.html
@@ -6,7 +6,7 @@
 {% block ogurl %}{{ config.base_url }}{{ section.path }}{% endblock ogurl %}
 
 {% block main -%}
-{% set_global snapshots_section = get_section(path="snapshots/_index.md") -%}
+{% set_global snapshots_section = get_section(path="snapshots/_index"~file_lang_path~".md") -%}
 {% set_global section_content = snapshots_section.content %}
 <div class="element-container">
 <div class="element">
@@ -17,7 +17,7 @@
 <div class="element">
 <h1>Snapshots</h1>
 <br>
-{% set all_blog_pages = get_section(path="snapshots/_index.md") %}
+{% set all_blog_pages = get_section(path="snapshots/_index"~file_lang_path~".md") %}
 {% for year, posts in all_blog_pages.pages | group_by(attribute="year") %}
 <h2>{{ year }}</h2>
 <br>
