added manifesto page

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,7 @@
           <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
           <a class="menu-button" href="/about/">About</a>
           <a class="menu-button" href="/now/">Now</a>
+          <a class="menu-button" href="/manifesto/">Manifesto</a>
           <a class="menu-button" href="/changelog/">Changelog</a>
           <a class="menu-button" href="/glossary/">Glossary</a>
           <a class="menu-button" href="/search/">Search</a>
