--- a/templates/shortcodes/fleet.html
+++ b/templates/shortcodes/fleet.html
@@ -1,5 +1,6 @@
 <div class="fleet">
-    <span id="{{ num }}" class="fleet-time">{{ time }}<br><a style="text-decoration: none;color: #b3b3b1;" href="/stream/{{ year }}/#{{ num }}"># {{ num }}</a></span>
-    <p class="fleet-content">{{ body | safe }}</p>
+<div style="justify-content: space-between;display: flex;"><span id="{{ num }}" class="fleet-time">{{ time }}</span><a class="fleet-time" style="text-decoration: none;color: #b3b3b1;" href="/stream/{{ year }}/#{{ num }}"># {{ num }}</a></div>
+<p class="fleet-content">{{ body | safe }}</p>
 </div>
+<hr>
 
