--- a/templates/stream.html
+++ b/templates/stream.html
@@ -29,6 +29,9 @@
             <span>{{ config.extra.author }}</span>
           </div>
           <div class="muted" style="justify-content: right;display: flex;">
+            <a class="muted" href="/stream/2024">2024</a>&emsp;
+            <a class="muted" href="/stream/2023">2023</a>&emsp;
+            <a class="muted" href="/stream/old-snapshots">Old Snapshots</a>&emsp;
             <a class="muted" href="/blog/built-a-personal-twitter-the-stream">About this page</a>
           </div>
         </div>
