update stream link

--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
         <div class="navbar-name">
           <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
           <a class="menu-button" href="{{ get_url(path="@/newsletters/_index.md",lang=lang) }}">Newsletters</a>
-          <a class="menu-button" href="/stream/2024">Stream</a>
+          <a class="menu-button" href="https://stream.pinchlime.com/notes">Stream</a>
           <a class="menu-button-search" href="{{ get_url(path="@/pages/search.md",lang=lang) }}">
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/search-icon_IsXZSS.svg" alt="search-icon" >
           </a>
@@ -123,7 +123,7 @@
         <div class="mobile-menu">
           <a class="menu-button" href="/blog/">Blog</a>
           <a class="menu-button" href="/newsletters/">Newsletters</a>
-          <a class="menu-button" href="/stream/2024">Stream</a>
+          <a class="menu-button" href="https://stream.pinchlime.com/notes">Stream</a>
           <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
           <a class="menu-button" href="/about/">About</a>
           <a class="menu-button" href="/now/">Now</a>
