update: A new issue of newsletter and a new "letters" page

--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -33,9 +33,8 @@
 <hr>
 <setion class="muted text-sm">
   <p>
-    你正在閱讀的是 Pin 起來電子報！<br>
-    若有任何問題或回饋，歡迎<a class="muted" href="mailto:pj@pinchlime.com?subject={{"回覆："~page.title | urlencode }}">來信</a>到：<code>pj@pinchlime.com</code> 跟我分享！<br>
-    若你還未訂閱，未來想要持續收到相關內容，也歡迎你到本站的 <a href="/subscribe">Subscribe</a> 頁面訂閱！
+    你正在閱讀的是舊版的 Pin 起來電子報！<br>
+    我現在已經轉移到另一個平台寫信，歡迎參考<a class="muted text-sm" href="/newsletters/stop-writing-newsletters">這篇說明</a>以訂閱最新的信。<br>
   </p>
 </setion>
 {% endblock outro %}
