--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,7 @@
         </div>
         <div class="navbar-name">
           <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
+          <a class="menu-button" href="/photography/">Photography</a>
           <a class="menu-button" href="/letters/">Letters</a>
           <a class="menu-button" href="/stream/2024">Stream</a>
           <a class="menu-button-search" href="{{ get_url(path="@/pages/search.md",lang=lang) }}">
@@ -122,6 +123,7 @@
         </div>
         <div class="mobile-menu">
           <a class="menu-button" href="/blog/">Blog</a>
+          <a class="menu-button" href="/photography/">Photography</a>
           <a class="menu-button" href="/letters/">Letters</a>
           <a class="menu-button" href="/stream/2024">Stream</a>
           <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
