--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -81,12 +81,9 @@ table tr:nth-child(even) {
 table tr:nth-child(odd) {
   background-color: #ffffff;
 }
-table th:first-child, table td:first-child {
-  width: 30%; /* 或者其他你希望的寬度 */
-}
-
+table th:first-child, table td:first-child,
 table th:nth-child(2), table td:nth-child(2) {
-  width: 70%; /* 或者其他你希望的寬度 */
+  width: auto;
 }
 table th {
   background-color: #003C6D;
