update zola to 0.19.2

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     trailing_slash=false,cachebust=true) | safe }}" async>
     <title>{% block title %}{{ config.title }}{% endblock title %}</title>
 
-    {% if config.generate_rss %} <link rel="alternate"
+    {% if config.generate_feeds %} <link rel="alternate"
     type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml") }}">
     {% endif %}
     {% block canonical_url %}{% endblock canonical_url %}
