--- a/templates/base.html
+++ b/templates/base.html
@@ -112,16 +112,16 @@
         </div>
         <div class="navbar-name">
           <a class="menu-button" href="{{ get_url(path="@/blog/_index.md",lang=lang) }}">Blog</a>
-          <a class="menu-button" href="/photography/">Photography</a>
           <a class="menu-button" href="/letters/">Letters</a>
+          <a class="menu-button" href="/consultation/">Consultation</a>
           <a class="menu-button-search" href="{{ get_url(path="@/pages/search.md",lang=lang) }}">
             <img src="https://pinchlime-screenshots.s3.ap-northeast-1.amazonaws.com/search-icon_IsXZSS.svg" alt="search-icon" >
           </a>
         </div>
         <div class="mobile-menu">
           <a class="menu-button" href="/blog/">Blog</a>
-          <a class="menu-button" href="/photography/">Photography</a>
           <a class="menu-button" href="/letters/">Letters</a>
+          <a class="menu-button" href="/consultation/">Consultation</a>
           <hr style="margin-top: 1.5rem; margin-bottom: 1.5rem;">
           <a class="menu-button" href="/about/">About</a>
           <a class="menu-button" href="/now/">Now</a>
