remove sidebar related codes

--- a/static/site/styles/site.css
+++ b/static/site/styles/site.css
@@ -506,10 +506,6 @@ article:last-of-type {
 .zola-anchor:visited {
   text-decoration: none;
 }
-.sidebar {
-  border-top: 0px solid var(--colors-divider);
-  display: block;
-}
 li.inline {
   display: inline-block;
   margin-right: 0.5rem;
@@ -535,14 +531,6 @@ li.inline {
 }
 .no-toc {
   width: auto;
-}
-.sidebar ul {
-  margin-top: 0;
-  padding-left: 1rem;
-  list-style: none;
-}
-.sidebar li {
-  font-size: 1rem;
 }
 
 .display-none {
@@ -749,16 +737,6 @@ div.pt a:hover {
     --element-min-width: 24rem;
   }
 
-  .sidebar-element {
-    width: 100%;
-    background-color: #fff;
-    padding: 0.5rem 1.5rem;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    max-width: 24rem;
-    min-width: 20rem;
-    margin: 1.4rem 1rem 2rem;
-  }
-
   .no-toc {
     width: 22rem;
   }
@@ -769,34 +747,6 @@ div.pt a:hover {
 
   .body-zone {
     flex-direction: row;
-  }
-
-  .sidebar {
-    position: sticky;
-    top: 60px;
-    height: calc(100vh - 60px);
-    z-index: 1;
-    width: 28rem;
-    overflow-y: auto;
-    display: block;
-  }
-
-  .sidebar ul {
-    list-style: none;
-  }
-
-  .sidebar li {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-    padding-right: 2rem;
-  }
-
-  .sidebar h2,
-  .sidebar h3 {
-    margin-bottom: 0;
-    font-size: 1rem;
-    padding-bottom: 1rem;
-    border: none;
   }
 
 }
@@ -846,8 +796,7 @@ div.pt a:hover {
     background-color: #ffffff; /* 確保容器背景為白色 */
   }
 
-  .element,
-  .sidebar-element {
+  .element {
     width: 100%;
     background-color: #fff;
     padding: var(--element-padding);
@@ -858,31 +807,8 @@ div.pt a:hover {
     border-radius: 0;
   }
   /* 移除最後一個 element 的底部邊距 */
-  .element:last-child,
-  .sidebar-element:last-child {
+  .element:last-child {
     margin-bottom: 0;
-  }
-  .sidebar-element {
-    padding: 0.5rem 2.5rem;
-  }
-
-  .sidebar ul {
-    list-style: none;
-  }
-
-  .sidebar li {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-    padding-right: 1rem;
-  }
-
-  .sidebar h2,
-  .sidebar h3 {
-    margin-bottom: 0;
-    font-size: 1rem;
-    font-weight: bold;
-    padding-bottom: 1rem;
-    border: none;
   }
 
   .menu-button {
