--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -28,13 +28,15 @@
 {% block detail_meta_slot -%}
 <span># {{page.extra.issues }} &nbsp;</span>
 {% endblock detail_meta_slot -%}
-{% block outro %}
+{% block note -%}
 <br>
-<hr>
-<setion class="muted text-sm">
-  <p>
+<setion>
+  <div class="archive-notice">
+    <p>
     你正在閱讀的是舊版的 Pin 起來電子報！<br>
-    我現在已經轉移到另一個平台寫信，歡迎參考<a class="muted text-sm" href="/newsletters/stop-writing-newsletters">這篇說明</a>以訂閱最新的信。<br>
-  </p>
+    我現在已經轉移到另一個平台寫信，歡迎參考<a href="/newsletters/stop-writing-newsletters">這篇說明</a>以訂閱最新的信。<br>
+    </p>
+  </div>
 </setion>
-{% endblock outro %}
+<hr>
+{% endblock note -%}
