--- a/templates/newsletter_page.html
+++ b/templates/newsletter_page.html
@@ -1,30 +1,18 @@
-{% extends "page.html" %} 
+{% extends "page.html" %}
 {% block breadcrumbs -%}
-  <div class="pt">
-    <span>&gt;&gt;</span>
-    <a class="category" href="/newsletters/">Newsletters</a>
-    {% if page.taxonomies.categories %}
-    <span class="divider">/</span>
-    <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0]) }}"> {{ page.taxonomies.categories[0] }}</a>
-    {% if page.taxonomies.tags -%}
-    <span class="divider">/</span>
-    {% for tag in page.taxonomies.tags %}
-    <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endif %}
-    {% if page.taxonomies.kinds %}
-    <span class="divider">/</span>
-    <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0]) }}">{{ page.taxonomies.kinds[0] }}</a>    
-    {% if page.taxonomies.tags -%}
-    <span class="divider">/</span>
-    {% for tag in page.taxonomies.tags %}
-    <a href="{{ get_taxonomy_url(kind="tags", name=tag) }}">{{ tag }}</a>{% if page.taxonomies.tags | length > 1 %}{% if loop.index != page.taxonomies.tags | length %},{% endif %}{% endif %}
-    {% endfor %}
-    {% endif %}
-    {% endif %}
-  </div>
-{% endblock breadcrumbs %}
+        <div class="breadcrumbs">
+          <a href="{{ get_url(path="/", lang=lang) }}">Pin 起來</a>
+          <span class="separator">/</span>
+          <a class="category" href="/newsletters/">Newsletters</a>
+          {% if page.taxonomies.categories %}
+          <a class="category" href="{{ get_taxonomy_url(kind="categories", name=page.taxonomies.categories[0],lang=lang) }}"> {{ page.taxonomies.categories[0] }}</a>
+          {% endif %}
+          {% if page.taxonomies.kinds %}
+          <span class="divider">/</span>
+          <a class="category" href="{{ get_taxonomy_url(kind="kinds", name=page.taxonomies.kinds[0],lang=lang) }}">{{ page.taxonomies.kinds[0] }}</a>    
+          {% endif %}
+        </div>
+{% endblock breadcrumbs %} 
 {% block detail_meta_slot -%}
 <span># {{page.extra.issues }} &nbsp;</span>
 {% endblock detail_meta_slot -%}
